--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="item">
         <h2 class="ui header">
           <i class="purple ticket icon"></i>
-          <div class="content">TOKITI MOVIES</div>
+          <div class="content">TOKITI MOVIE THEATER</div>
           <div class="sub header" id="subtitle">BUY MOVIE TICKETS</div>
         </h2>
       </div>
